fixed buttons invisible

--- a/scss/img-lightbox.scss
+++ b/scss/img-lightbox.scss
@@ -172,6 +172,7 @@
 }
 
 .img-lightbox .btn-close {
+	display: block;
 	position: fixed;
 	top: 1.000rem;
 	right: 1.000rem;
